Fix inference responses emptied after handoff